golo-1.0.0 snapshot